package org.java.powerchess.powerchess;

public enum Color {
    BLANCO, NEGRO;
}
