package org.java.powerchess.powerchess;

public class DobleJuego extends PoderDeAccion {
    public void activar(Pieza pieza) {
    }
    public String getNombre(){
        return "DobleJuego";
    }

    public boolean habilitado() {
      return this.habilitado;
    }
}

