package org.java.powerchess.powerchess;

public class Evolucion extends PoderDeAccion{
    public void activar(Pieza pieza) {
    }

    public void desactivar(Pieza pieza) {
    }

    public String getNombre(){
        return "Evolucion";
    }

    public boolean habilitado() {
      return this.habilitado;
    }
}
