package org.java.powerchess.powerchess;
import java.util.List;

public class RobarPoder extends PoderDeAccion {
    public void activar(Pieza pieza) {
        /*Jugador jugadorRival = jugador.getJugadorRival(); //agregar jugador como parametro de activar?
        List<Poder> poderesRival = jugadorRival.getPoderes();

        if (!poderesRival.isEmpty()) {
            Poder poderRobado = poderesRival.getFirst(); //roba el primer poder siempre
            jugador.agregarPoder(poderRobado);
            jugadorRival.removerPoder(poderRobado);
        }
    }*/
    }

    public String getNombre(){
        return "RobarPoder";
    }
    public boolean habilitado() {
      return this.habilitado;
    }
}
