package org.java.powerchess.powerchess;

public class Vuelo extends PoderDeAccion {
    public void activar(Pieza pieza) {
    }

    public String getNombre(){
        return "Vuelo";
    }

    public boolean habilitado() {
      return this.habilitado;
    }
}
